--- a/src/input/CMakeLists.txt
+++ b/src/input/CMakeLists.txt
@@ -1,5 +1,4 @@
-target_sources(opencm PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/Utility.cpp
+target_sources(mdmclib PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/ReadInput.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ReadForceFieldGenerator.cpp
     )
