feat: add 'SegmentParallelizationForceFieldGenerator.cpp' and 'PositionRestraintForceFieldGenerator.cpp' in CMakeList.txt

--- a/src/ff/CMakeLists.txt
+++ b/src/ff/CMakeLists.txt
@@ -5,5 +5,7 @@ target_sources(mdmclib PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/HarmonicBondForceFieldGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/MonteCarloAnisotropicBarostatGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/PolynomialRepulsiveForceFieldGenerator.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/PositionRestraintForceFieldGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/PullingForceFieldGenerator.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/SegmentParallelizationForceFieldGenerator.cpp
     )
