--- a/src/ff/CMakeLists.txt
+++ b/src/ff/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(mdmclib PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/ExcludedVolumeForceFieldGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GrosbergAngleForceFieldGenerator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GrosbergRepulsiveForceFieldGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HarmonicAngleForceFieldGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HarmonicBondForceFieldGenerator.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/MonteCarloAnisotropicBarostatGenerator.cpp
